force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__InterestRateNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__InterestRateNumber__c</fullName>
    <label>Interest Rate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>InterestRateNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>