force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__MonthlyPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__MonthlyPaymentAmount__c</fullName>
    <label>Monthly Payment Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MonthlyPaymentAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>