force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__ProposalAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProposalAmount__c</fullName>
    <label>Proposal Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProposalAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>