force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__ProposalStage__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProposalStage__c</fullName>
    <label>Proposal Stage</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProposalStage</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>