force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__SelectedBy__c.field-meta.xml
<CustomField>
    <fullName>ssot__SelectedBy__c</fullName>
    <label>Selected By</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SelectedBy</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>