force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__TermInMonths__c.field-meta.xml
<CustomField>
    <fullName>ssot__TermInMonths__c</fullName>
    <label>Term In Months</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TermInMonths</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>