force-app/main/default/objects/ssot__FinancialApplicationItemProposal__dlm/fields/ssot__TotalInterestAmount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalInterestAmount__c</fullName>
    <label>Total Interest Amount</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalInterestAmount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>